[package]
name = "nomansbevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release]
lto = "thin" # this affects compilation times *a lot*

[dependencies]
# remember to remove dynamic_linking for releases
bevy = { version = "0.14", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.25"
bevy_rapier2d = { version = "0.27", features = ["debug-render-2d"] }
rand = "0.8.5"
